--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
   import { GoogleGenerativeAI } from "@google/generative-ai";
     // State variables
 const genAI = new GoogleGenerativeAI("AIzaSyB9xg-rKXIrKFJSrj9Yxr4B-8_8-y_vyPE");
-const model = genAI.getGenerativeModel({ model: "gemini-2.0(-flash" });
+const model = genAI.getGenerativeModel({ model: "gemini-1.5-flash" });
     const genres = [
       'Fantasy Adventure',
       'Sci-Fi Thriller',
