--- a/index.html
+++ b/index.html
@@ -966,6 +966,8 @@
       }
     });
   </script>
+  <script
+src="https://code.responsivevoice.org/responsivevoice.js?key=Qa0t9Y6n"></script>
 </body>
 
 </html>
