--- a/index.html
+++ b/index.html
@@ -415,6 +415,8 @@
 
   <script>
     // Configure LocalForage
+    responsiveVoice.setDefaultVoice("US English Male");
+
     localforage.config({
       name: 'RunningStoryTracker',
       storeName: 'runningData'
