--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <title>Running Story Tracker</title>
   <script src="https://js.puter.com/v2/"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/localforage/1.10.0/localforage.min.js"></script>
+    <script src="https://code.responsivevoice.org/responsivevoice.js?key=Qa0t9Y6n"></script>
   <style>
     * {
       margin: 0;
@@ -952,8 +953,6 @@
       }
     });
   </script>
-  <script
-src="https://code.responsivevoice.org/responsivevoice.js?key=Qa0t9Y6n"></script>
 </body>
 
 </html>
