--- a/index.html
+++ b/index.html
@@ -684,7 +684,7 @@
         avgSpeed > 3 ? 'moderate tension' :
           'reflective and atmospheric';
 
-      const prompt = 'You are writing segment ' + segmentNumber + ' of an ongoing ' + state.genre + ' story. This is a story for a runner, and they have been running at ' + avgSpeed.toFixed(1) + ' mph, so make this segment ' + paceDescription + '.\n\n' +
+      const prompt = 'You are writing segment ' + segmentNumber + ' of an ongoing ' + state.genre + ' story. This is a story for a runner, and they have been running at ' + avgSpeed.toFixed(1) + ' mph, so make this segment ' + paceDescription + '. It should be in second person with me as the main character, almost like roleplay.\n\n' +
         (segmentNumber === 1 ?
           'This is the BEGINNING of the story. Introduce the main character and setting in an engaging way. End with a hook that makes them want to keep running for the next part. Write 3-4 paragraphs.' :
           'This is segment ' + segmentNumber + '. Continue the story with rising action. Reference what happened before naturally. End with a cliffhanger or exciting moment. Write 3-4 paragraphs.\n\nPrevious segments summary: ' + state.storySegments.slice(-2).map(s => s.text.slice(0, 100)).join(' ... ')
