--- a/index.html
+++ b/index.html
@@ -401,8 +401,12 @@
         <button id="pauseBtn" class="btn btn-pause" style="display: none;">
           ⏸️ Pause
         </button>
+
         <button id="resetBtn" class="btn btn-reset">
           🔄 Reset
+        </button>
+                <button class="btn btn-reset" onclick='generateStorySegment(1,5)'>
+          test app
         </button>
       </div>
 
