--- a/index.html
+++ b/index.html
@@ -769,7 +769,7 @@
         state.isSpeaking = true;
         speakingStatus.style.display = 'inline';
 
-        responsiveVoice.speak(text, "UK English Male");
+        responsiveVoice.speak(text, "US English Male");
       } catch (error) {
         console.error('TTS Error:', error);
         state.isSpeaking = false;
