--- a/index.html
+++ b/index.html
@@ -696,7 +696,7 @@
         ) + '\n\nWrite ONLY the story segment, no meta-commentary. Make it exciting and match the running pace!';
 
       try {
-        const response = await fetch('https://generativelanguage.googleapis.com/v1beta/models/gemini-2.5-pro:generateContent?key=' + state.apiKey, {
+        const response = await fetch('https://generativelanguage.googleapis.com/v1beta/models/gemini-2.0-flash:generateContent?key=' + state.apiKey, {
           method: 'POST',
           headers: {
             'Content-Type': 'application/json',
