--- a/index.html
+++ b/index.html
@@ -691,8 +691,8 @@
 
       const prompt = 'You are writing segment ' + segmentNumber + ' of an ongoing ' + state.genre + ' story. This is a story for a runner, and they have been running at ' + avgSpeed.toFixed(1) + ' mph, so make this segment ' + paceDescription + '. It should be in second person with me as the main character, almost like roleplay.\n\n' +
         (segmentNumber === 1 ?
-          'This is the BEGINNING of the story. Introduce the main character and setting in an engaging way. End with a hook that makes them want to keep running for the next part. Write 3-4 paragraphs.' :
-          'This is segment ' + segmentNumber + '. Continue the story with rising action. Reference what happened before naturally. End with a cliffhanger or exciting moment. Write 3-4 paragraphs.\n\nPrevious segments summary: ' + state.storySegments.slice(-2).map(s => s.text.slice(0, 100)).join(' ... ')
+          'This is the BEGINNING of the story. Introduce the main character and setting in an engaging way. End with a hook that makes them want to keep running for the next part. Write 8-10 paragraphs.' :
+          'This is segment ' + segmentNumber + '. Continue the story with rising action. Reference what happened before naturally. End with a cliffhanger or exciting moment. Write 8-10 paragraphs.\n\nPrevious segments summary: ' + state.storySegments.slice(-2).map(s => s.text.slice(0, 100)).join(' ... ')
         ) + '\n\nWrite ONLY the story segment, no meta-commentary. Make it exciting and match the running pace!';
 
       try {
@@ -761,10 +761,6 @@
 
 
     async function speakText(text) {
-      if (state.currentAudio) {
-        responsiveVoice.cancel();
-        state.currentAudio = null;
-      }
 
       const response = await fetch('/generate-speech', { // This endpoint will be handled by your backend
         method: 'POST',
@@ -773,6 +769,7 @@
         },
         body: text
       })
+      console.log(response)
         var url = URL.createObjectURL(response.blob());
          au = document.createElement("audio");
         au.src = url;
