--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <script type="module" src='https://unpkg.com/edge-tts-universal/dist/browser.js'></script>
+  <script src="https://cdn.jsdelivr.net/npm/universal-edge-tts@1.3.2/browser.min.js"></script>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Running Story Tracker</title>
@@ -763,7 +763,7 @@
 
     async function speakText(text) {
 
-      const tts = new UniversalEdgeTTS('Hello, world!', 'en-US-EmmaMultilingualNeural');
+      const tts = new UniversalEdgeTTS(text, 'en-US-EmmaMultilingualNeural');
       const result = await tts.synthesize();
       const audioBuffer = AudioBuffer.from(await result.audio);
 
