--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
 
 <head>
-  <script src="https://cdn.jsdelivr.net/npm/universal-edge-tts@1.3.2/browser.min.js"></script>
+  <script type="module"> import UniversalEdgeTTS from 'https://cdn.jsdelivr.net/npm/edge-tts-universal@1.3.2/+esm'
+  </script>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Running Story Tracker</title>
