--- a/public/index.html
+++ b/public/index.html
@@ -2,8 +2,6 @@
 <html lang="en">
 
 <head>
-  <script type="module"> import UniversalEdgeTTS from 'https://cdn.jsdelivr.net/npm/edge-tts-universal@1.3.2/+esm'
-  </script>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Running Story Tracker</title>
@@ -420,9 +418,9 @@
     <div id="storyContainer"></div>
   </div>
 
-  <script>
+  <script type="module">
     // Configure LocalForage
-
+    import UniversalEdgeTTS from 'https://cdn.jsdelivr.net/npm/edge-tts-universal@1.3.2/+esm'
     localforage.config({
       name: 'RunningStoryTracker',
       storeName: 'runningData'
