--- a/public/index.html
+++ b/public/index.html
@@ -420,7 +420,7 @@
 
   <script type="module">
     // Configure LocalForage
-    import UniversalEdgeTTS from 'https://cdn.jsdelivr.net/npm/edge-tts-universal@1.3.2/+esm'
+    import {UniversalEdgeTTS} from 'https://cdn.jsdelivr.net/npm/edge-tts-universal@1.3.2/+esm'
     localforage.config({
       name: 'RunningStoryTracker',
       storeName: 'runningData'
