--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+  <script src="https://cdn.jsdelivr.net/npm/@elevenlabs/elevenlabs-js@2.19.0/index.min.js"></script>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Running Story Tracker</title>
@@ -405,8 +406,8 @@
         <button id="resetBtn" class="btn btn-reset">
           🔄 Reset
         </button>
-        <button id="test" class="btn btn-reset">
-          Test App
+        <button class="btn btn-reset" onclick='generateStorySegment(1,5)'>
+          test app
         </button>
       </div>
 
@@ -418,9 +419,9 @@
     <div id="storyContainer"></div>
   </div>
 
-  <script type="module">
+  <script>
     // Configure LocalForage
-    import {UniversalEdgeTTS} from 'https://cdn.jsdelivr.net/npm/edge-tts-universal@1.3.2/+esm'
+
     localforage.config({
       name: 'RunningStoryTracker',
       storeName: 'runningData'
@@ -584,9 +585,7 @@
         enableNotificationsBtn.style.display = 'none';
       }
     }
-    document.querySelector("#test").onclick = ()=> {
-      generateStorySegment(1,5)
-    }
+
     enableNotificationsBtn.addEventListener('click', async () => {
       if ('Notification' in window) {
         const permission = await Notification.requestPermission();
@@ -763,15 +762,15 @@
 
 
     async function speakText(text) {
-
-      const tts = new UniversalEdgeTTS(text, 'en-US-EmmaMultilingualNeural');
-      const result = await tts.synthesize();
-      const audioBuffer = AudioBuffer.from(await result.audio);
-
-      var url = URL.createObjectURL(audioBuffer);
-      au = document.createElement("audio");
-      au.src = url;
-      au.play();
+      const key = "sk_b61fdc5029a6d4d8552891048f6100400aec06c7e1c3494d";
+      const elevenlabs = new ElevenLabsClient({
+        apiKey: key, // Defaults to process.env.ELEVENLABS_API_KEY
+      });
+      const audio = await elevenlabs.textToSpeech.convert("Xb7hH8MSUJpSbSDYk0k2", {
+        text: text,
+        modelId: "eleven_multilingual_v2",
+      });
+     console.log(audio)
 
     }
 
