--- a/public/index.html
+++ b/public/index.html
@@ -764,7 +764,7 @@
                 method: 'POST',
                 headers: {
                     'Content-Type': 'application/json',
-                    'Authorization': `Bearer sk-5678mnop5678mnop5678mnop5678mnop5678mnop`
+                    'Authorization': `Bearer ${process.env.key}`
                 },
                 body: JSON.stringify({
                     model: 'tts-1', // Or 'tts-1-hd' for higher quality
