--- a/public/index.html
+++ b/public/index.html
@@ -760,11 +760,13 @@
 
 
     async function speakText(text) {
+        const key = await fetch("/key")
+
         const response = await fetch('https://api.openai.com/v1/audio/speech', {
                 method: 'POST',
                 headers: {
                     'Content-Type': 'application/json',
-                    'Authorization': `Bearer ${process.env.key}`
+                    'Authorization': `Bearer ${key}`
                 },
                 body: JSON.stringify({
                     model: 'tts-1', // Or 'tts-1-hd' for higher quality
