--- a/public/index.html
+++ b/public/index.html
@@ -419,7 +419,7 @@
 
   <script>
     // Configure LocalForage
-
+var key;
     localforage.config({
       name: 'RunningStoryTracker',
       storeName: 'runningData'
@@ -760,7 +760,7 @@
 
 
     async function speakText(text) {
-        const key = await fetch("/key")
+         key = await fetch("/key")
 
         const response = await fetch('https://api.openai.com/v1/audio/speech', {
                 method: 'POST',
