--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+  <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Running Story Tracker</title>
   <script src="https://js.puter.com/v2/"></script>
@@ -419,7 +420,7 @@
 
   <script>
     // Configure LocalForage
-var key;
+
     localforage.config({
       name: 'RunningStoryTracker',
       storeName: 'runningData'
@@ -529,7 +530,7 @@ var key;
         console.error('Error loading saved state:', error);
       }
     }
-    var au = document.createElement("audio");
+    var au;
 
     // Save state to LocalForage
     async function saveState() {
@@ -760,27 +761,19 @@ var key;
 
 
     async function speakText(text) {
-         await fetch("/key").then(k=>k.text()).then(data=>key = data);
 
-        const response = await fetch('https://api.openai.com/v1/audio/speech', {
-                method: 'POST',
-                headers: {
-                    'Content-Type': 'application/json',
-                    'Authorization': `Bearer ${key}`
-                },
-                body: JSON.stringify({
-                    model: 'tts-1', // Or 'tts-1-hd' for higher quality
-                    input: text,
-                    voice: 'alloy' // Choose a voice (e.g., 'alloy', 'fable', 'onyx', 'nova', 'shimmer', 'echo')
-                })
-            });
-            console.log(response);
-            const audioBlob = await response.blob();
-            const audioUrl = URL.createObjectURL(audioBlob);
-            
-            au.src = audioUrl;
-            au.play();
-
+      const response = await fetch('/generate-speech', { // This endpoint will be handled by your backend
+        method: 'GET',
+        headers: {
+          'Content-Type': 'application/json',
+        },
+        body: text
+      })
+      console.log(response)
+        var url = URL.createObjectURL(response.blob());
+         au = document.createElement("audio");
+        au.src = url;
+        au.play();
 
     }
 
