--- a/public/index.html
+++ b/public/index.html
@@ -765,7 +765,7 @@
       const response = await fetch('/generate-speech', { // This endpoint will be handled by your backend
         method: 'POST',
         headers: {
-          'Content-Type': 'application/json',
+          'Content-Type': 'text/txt',
         },
         body: text
       })
