--- a/index.html
+++ b/index.html
@@ -768,7 +768,8 @@
       });
       console.log(response)
       console.log(response.body)
-        var url = URL.createObjectURL(response.body);
+      var resp = new Response(response.body);
+        var url = URL.createObjectURL(resp.blob());
          au = document.createElement("audio");
         au.src = url;
         au.play();
