--- a/index.html
+++ b/index.html
@@ -769,6 +769,7 @@
       console.log(response)
       console.log(response.body)
       var resp = new Response(response.body);
+      console.log(resp)
         var url = URL.createObjectURL(resp.blob());
          au = document.createElement("audio");
         au.src = url;
