--- a/index.html
+++ b/index.html
@@ -776,9 +776,9 @@
             }
             chunks.push(value);
         }
-        console.log(chunks)
         var blob = new Blob(chunks, {type: "audio/mp3"})
         var url = URL.createObjectURL(blob);
+        console.log(url);
         au.src = url;
         document.body.appendChild(au);
         au.play();
