--- a/index.html
+++ b/index.html
@@ -530,7 +530,7 @@
         console.error('Error loading saved state:', error);
       }
     }
-    var au= document.createElement("audio");
+    var au = document.createElement("audio");
 
     // Save state to LocalForage
     async function saveState() {
@@ -663,7 +663,7 @@
       progressPercent.textContent = Math.floor(progress) + '%';
       distanceToNext.textContent = (0.5 - distanceSinceLastStory).toFixed(3) + ' miles to next segment';
     }
-var blob;
+    var blob;
     function checkForNewSegment() {
       const distanceSinceLastStory = state.distance - state.lastStoryDistance;
       if (state.isTracking && distanceSinceLastStory >= 0.5 && !state.isGenerating) {
@@ -716,7 +716,7 @@ var blob;
           throw new Error(data.error.message);
         }
 
-         storyText = data.candidates[0].content.parts[0].text;
+        storyText = data.candidates[0].content.parts[0].text;
 
         const newSegment = {
           segment: segmentNumber,
@@ -765,13 +765,17 @@ var blob;
         method: 'POST',
         body: text,
       });
-         blob = await response.blob()
-        console.log(blob)
-        var url = URL.createObjectURL(blob);
-        console.log(url)
-        au.src = url;
-        document.body.appendChild(au);
-        au.play();
+      blob = await response.blob()
+      console.log(blob)
+      const dataUrl = await new Promise((resolve) => {
+        const reader = new FileReader();
+        reader.onloadend = () => resolve(reader.result);
+        reader.readAsDataURL(blob);
+      });
+      console.log(dataurl)
+      au.src = dataurl;
+      document.body.appendChild(au);
+      au.play();
 
     }
 
