--- a/index.html
+++ b/index.html
@@ -766,7 +766,7 @@
         body: text,
       });
       var data = await response.json()
-      var dataurl = data.dataUrl;
+      var dataurl = data.url;
       console.log(response)
       
       au.src = dataurl;
