--- a/index.html
+++ b/index.html
@@ -767,7 +767,7 @@
       });
       var data = await response.json()
       var dataurl = data.url;
-      console.log(response)
+      console.log(data)
       
       au.src = dataurl;
       document.body.appendChild(au);
