--- a/public/index.html
+++ b/public/index.html
@@ -767,7 +767,7 @@
       });
     
       
-      au.src = response.body;
+      au.src = response;
       document.body.appendChild(au);
       au.play();
 
