--- a/public/index.html
+++ b/public/index.html
@@ -765,7 +765,7 @@
         method: 'POST',
         body: text,
       });
-    
+      console.log(response);
       
       au.src = response;
       document.body.appendChild(au);
