--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Running Story Tracker</title>
+  <title>Road Trip Story Tracker</title>
   <script src="https://js.puter.com/v2/"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/localforage/1.10.0/localforage.min.js"></script>
   <script src="https://code.responsivevoice.org/responsivevoice.js?key=Qa0t9Y6n"></script>
@@ -396,7 +396,7 @@
 
       <div class="buttons">
         <button id="startBtn" class="btn btn-start">
-          ▶️ Start Running
+          ▶️ Start Driving
         </button>
         <button id="pauseBtn" class="btn btn-pause" style="display: none;">
           ⏸️ Pause
