--- a/index.html
+++ b/index.html
@@ -317,7 +317,7 @@
     <div class="card">
       <div class="header">
         <span class="icon">📚</span>
-        <h1>Running Story Tracker</h1>
+        <h1>Road Trip Story Tracker</h1>
       </div>
 
       <div id="setupSection">
@@ -693,7 +693,7 @@
         (segmentNumber === 1 ?
           'This is the BEGINNING of the story. Introduce the main character and setting in an engaging way. End with a hook that makes them want to keep driving for the next part. Write 8-10 paragraphs.' :
           'This is segment ' + segmentNumber + '. Continue the story with rising action. Reference what happened before naturally. End with a cliffhanger or exciting moment. Write 8-10 paragraphs.\n\nPrevious segments summary: ' + state.storySegments.slice(-2).map(s => s.text.slice(0, 100)).join(' ... ')
-        ) + '\n\nWrite ONLY the story segment, no meta-commentary. Make it exciting and match the running pace!';
+        ) + '\n\nWrite ONLY the story segment, no meta-commentary. Make it exciting and match the driving pace!';
 
       try {
         const response = await fetch('https://generativelanguage.googleapis.com/v1beta/models/gemini-2.0-flash:generateContent?key=' + state.apiKey, {
@@ -855,7 +855,7 @@
         (error) => {
           console.error('GPS Error:', error);
           gpsStatus.textContent = 'Location permission denied';
-          alert('Please enable location permissions to track your run.');
+          alert('Please enable location permissions to track your drive.');
           state.isTracking = false;
           state.hasStarted = false;
           startBtn.style.display = 'block';
@@ -890,7 +890,7 @@
     });
 
     resetBtn.addEventListener('click', async () => {
-      if (state.hasStarted && !confirm('Are you sure you want to reset? This will clear your current run and story.')) {
+      if (state.hasStarted && !confirm('Are you sure you want to reset? This will clear your current trip and story.')) {
         return;
       }
 
@@ -924,7 +924,7 @@
       progressSection.style.display = 'none';
       startBtn.style.display = 'block';
       pauseBtn.style.display = 'none';
-      startBtn.innerHTML = '▶️ Start Running';
+      startBtn.innerHTML = '▶️ Start Driving';
       storyContainer.innerHTML = '';
       speakingStatus.style.display = 'none';
       locationIcon.textContent = '📍';
