--- a/index.html
+++ b/index.html
@@ -406,7 +406,7 @@
           🔄 Reset
         </button>
         <button class="btn btn-reset" onclick='generateStorySegment(1,35)'>
-          test app
+          Test App
         </button>
       </div>
 
@@ -765,12 +765,19 @@
         method: 'POST',
         body: text,
       });
-      console.log(response);
-      
       au.src = await response.text();
       document.body.appendChild(au);
       au.play();
-
+      var toggle = document.querySelector("#resetBtn").cloneNode(true);
+      toggle.id = "toggle";
+      toggle.innerText = "Toggle Audio";
+      toggle.onclick = () => {
+        if (au.paused) au.play();
+        else au.pause();
+      }
+      document.querySelector(".buttons").appendChild(toggle);
+      au.onended = () => { toggle.remove() };
+    
     }
 
     function displayStorySegment(segment) {
