--- a/index.html
+++ b/index.html
@@ -740,7 +740,7 @@
           });
         }
 
-        if (state.isTTSEnabled && state.isTracking) {
+        if (state.isTTSEnabled) {
           speakText(storyText);
         }
       } catch (error) {
