--- a/index.html
+++ b/index.html
@@ -766,8 +766,9 @@
         method: 'POST',
         body: text,
       });
-      
-      au.src = await response.text();
+      if(!au.paused){
+        au.onended = ()=>{
+          au.src = await response.text();
       document.body.appendChild(au);
       au.play();
       var toggle = document.querySelector("#resetBtn").cloneNode(true);
@@ -778,7 +779,22 @@
         else au.pause();
       }
       document.querySelector(".buttons").appendChild(toggle);
-      au.onended =() => { toggle.remove()};
+        }
+      }
+      else {
+        au.src = await response.text();
+      document.body.appendChild(au);
+      au.play();
+      var toggle = document.querySelector("#resetBtn").cloneNode(true);
+      toggle.id = "toggle";
+      toggle.innerText = "Toggle Audio";
+      toggle.onclick = ()=> {
+        if(au.paused) au.play();
+        else au.pause();
+      }
+      document.querySelector(".buttons").appendChild(toggle);
+      }
+      
     }
 
     function displayStorySegment(segment) {
