--- a/index.html
+++ b/index.html
@@ -766,35 +766,19 @@
         method: 'POST',
         body: text,
       });
-      if(!au.paused){
-        au.onended = async ()=>{
-          au.src = await response.text();
-      document.body.appendChild(au);
-      au.play();
-      var toggle = document.querySelector("#resetBtn").cloneNode(true);
-      toggle.id = "toggle";
-      toggle.innerText = "Toggle Audio";
-      toggle.onclick = ()=> {
-        if(au.paused) au.play();
-        else au.pause();
-      }
-      document.querySelector(".buttons").appendChild(toggle);
-        }
-      }
-      else {
-        au.src = await response.text();
-      document.body.appendChild(au);
-      au.play();
-      var toggle = document.querySelector("#resetBtn").cloneNode(true);
-      toggle.id = "toggle";
-      toggle.innerText = "Toggle Audio";
-      toggle.onclick = ()=> {
-        if(au.paused) au.play();
-        else au.pause();
-      }
-      document.querySelector(".buttons").appendChild(toggle);
-      }
       
+      au.src = await response.text();
+      document.body.appendChild(au);
+      au.play();
+      var toggle = document.querySelector("#resetBtn").cloneNode(true);
+      toggle.id = "toggle";
+      toggle.innerText = "Toggle Audio";
+      toggle.onclick = ()=> {
+        if(au.paused) au.play();
+        else au.pause();
+      }
+      document.querySelector(".buttons").appendChild(toggle);
+      au.onended =() => { toggle.remove()};
     }
 
     function displayStorySegment(segment) {
