--- a/index.html
+++ b/index.html
@@ -959,7 +959,7 @@
       }
     });
     function generateStorySegment2(){
-      generateStorySegment(state.segments.length+1,5)
+      generateStorySegment(state.storySegments.length+1,5)
     }
   </script>
   <script>
