--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-  <title>Road Trip Story Tracker</title>
+  <title>Running Story Tracker</title>
+  <link rel="manifest" href="manifest.json">
   <script src="https://js.puter.com/v2/"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/localforage/1.10.0/localforage.min.js"></script>
   <script src="https://code.responsivevoice.org/responsivevoice.js?key=Qa0t9Y6n"></script>
@@ -318,7 +318,7 @@
     <div class="card">
       <div class="header">
         <span class="icon">📚</span>
-        <h1>Road Trip Story Tracker</h1>
+        <h1>Running Story Tracker</h1>
       </div>
 
       <div id="setupSection">
@@ -391,13 +391,13 @@
           <div class="progress-fill" id="progressFill" style="width: 0%"></div>
         </div>
         <div style="color: rgba(255, 255, 255, 0.6); font-size: 12px; text-align: center; margin-top: 10px;">
-          <span id="distanceToNext">5.000 miles to next segment</span>
+          <span id="distanceToNext">0.500 miles to next segment</span>
         </div>
       </div>
 
       <div class="buttons">
         <button id="startBtn" class="btn btn-start">
-          ▶️ Start Driving
+          ▶️ Start Running
         </button>
         <button id="pauseBtn" class="btn btn-pause" style="display: none;">
           ⏸️ Pause
@@ -465,13 +465,13 @@
     const progressPercent = document.getElementById('progressPercent');
     const distanceToNext = document.getElementById('distanceToNext');
     const generatingIndicator = document.getElementById('generatingIndicator');
-    const generatingAudioIndicator = document.getElementById('generatingAudioIndicator');
     const storyContainer = document.getElementById('storyContainer');
     const setupSection = document.getElementById('setupSection');
     const speakingStatus = document.getElementById('speakingStatus');
     const notificationStatus = document.getElementById('notificationStatus');
     const locationIcon = document.getElementById('locationIcon');
     const notificationIcon = document.getElementById('notificationIcon');
+    const generatingAudioIndicator = document.getElementById('generatingAudioIndicator');
 
     // Load saved state on startup
     async function loadSavedState() {
@@ -634,7 +634,7 @@
 
         const timeDiffHours = (currentTime - state.lastTime) / 1000 / 3600;
 
-        if (dist > 0.001 && dist < 5.0 && timeDiffHours > 0) {
+        if (dist > 0.001 && dist < 0.5 && timeDiffHours > 0) {
           state.distance += dist;
           distanceDisplay.textContent = state.distance.toFixed(3) + ' mi';
 
@@ -663,16 +663,16 @@
 
     function updateProgress() {
       const distanceSinceLastStory = state.distance - state.lastStoryDistance;
-      const progress = (distanceSinceLastStory / 5.0) * 100;
+      const progress = (distanceSinceLastStory / 0.5) * 100;
       progressFill.style.width = Math.min(progress, 100) + '%';
       progressPercent.textContent = Math.floor(progress) + '%';
-      distanceToNext.textContent = (5.0 - distanceSinceLastStory).toFixed(3) + ' miles to next segment';
+      distanceToNext.textContent = (0.5 - distanceSinceLastStory).toFixed(3) + ' miles to next segment';
     }
     var blob;
     function checkForNewSegment() {
       const distanceSinceLastStory = state.distance - state.lastStoryDistance;
-      if (state.isTracking && distanceSinceLastStory >= 5.0 && !state.isGenerating) {
-        const segmentNumber = Math.floor(state.distance / 5.0);
+      if (state.isTracking && distanceSinceLastStory >= 0.5 && !state.isGenerating) {
+        const segmentNumber = Math.floor(state.distance / 0.5);
         const avgSpeed = state.speedHistory.length > 0
           ? state.speedHistory.reduce((a, b) => a + b, 0) / state.speedHistory.length
           : 3;
@@ -694,11 +694,11 @@
         avgSpeed > 3 ? 'moderate tension' :
           'reflective and atmospheric';
 
-      const prompt = 'You are writing segment ' + segmentNumber + ' of an ongoing ' + state.genre + ' story. This is a story for a road trip, and they have been driving at ' + avgSpeed.toFixed(1) + ' mph, so make this segment accurate to the speed. It should be in second person with me as the main character, almost like roleplay.\n\n' +
+      const prompt = 'You are writing segment ' + segmentNumber + ' of an ongoing ' + state.genre + ' story. This is a story for a runner, and they have been running at ' + avgSpeed.toFixed(1) + ' mph, so make this segment ' + paceDescription + '. It should be in second person with me as the main character, almost like roleplay.\n\n' +
         (segmentNumber === 1 ?
-         'This is the BEGINNING of the story. Introduce the main character and setting in an engaging way. End with a hook that makes them want to keep driving for the next part. Write 18-20 paragraphs.' :
+          'This is the BEGINNING of the story. Introduce the main character and setting in an engaging way. End with a hook that makes them want to keep running for the next part. Write 18-20 paragraphs.' :
           'This is segment ' + segmentNumber + '. Continue the story with rising action. Reference what happened before naturally. End with a cliffhanger or exciting moment. Write 18-20 paragraphs.\n\nHere is the story so far, which you will continue on: ' + storyText
-        ) + '\n\nWrite ONLY the story segment, no meta-commentary. Make it exciting and match the driving speed!';
+        ) + '\n\nWrite ONLY the story segment, no meta-commentary. Make it exciting and match the running pace!';
 
       try {
         const response = await fetch('https://generativelanguage.googleapis.com/v1beta/models/gemini-2.0-flash:generateContent?key=' + state.apiKey, {
@@ -763,28 +763,30 @@
       state.isGenerating = false;
       generatingIndicator.style.display = 'none';
       generatingAudioIndicator.style.display = 'block';
+
     }
 
 
     async function speakText(text) {
+      generatingAudioIndicator.style.display = 'none';
       const response = await fetch('/generate-speech', { // This endpoint will be handled by your backend
         method: 'POST',
         body: text,
       });
-      generatingAudioIndicator.style.display = 'none';
+      
       au.src = await response.text();
       document.body.appendChild(au);
       au.play();
       var toggle = document.querySelector("#resetBtn").cloneNode(true);
       toggle.id = "toggle";
       toggle.innerText = "Toggle Audio";
-      toggle.onclick = () => {
-        if (au.paused) au.play();
+      toggle.onclick = ()=> {
+        if(au.paused) au.play();
         else au.pause();
       }
       document.querySelector(".buttons").appendChild(toggle);
-      au.onended = () => { toggle.remove() };
-    
+      au.onended =() => { toggle.remove()};
+
     }
 
     function displayStorySegment(segment) {
@@ -869,7 +871,7 @@
         (error) => {
           console.error('GPS Error:', error);
           gpsStatus.textContent = 'Location permission denied';
-          alert('Please enable location permissions to track your drive.');
+          alert('Please enable location permissions to track your run.');
           state.isTracking = false;
           state.hasStarted = false;
           startBtn.style.display = 'block';
@@ -904,7 +906,7 @@
     });
 
     resetBtn.addEventListener('click', async () => {
-      if (state.hasStarted && !confirm('Are you sure you want to reset? This will clear your current trip and story.')) {
+      if (state.hasStarted && !confirm('Are you sure you want to reset? This will clear your current run and story.')) {
         return;
       }
 
@@ -938,7 +940,7 @@
       progressSection.style.display = 'none';
       startBtn.style.display = 'block';
       pauseBtn.style.display = 'none';
-      startBtn.innerHTML = '▶️ Start Driving';
+      startBtn.innerHTML = '▶️ Start Running';
       storyContainer.innerHTML = '';
       speakingStatus.style.display = 'none';
       locationIcon.textContent = '📍';
