--- a/index.html
+++ b/index.html
@@ -406,7 +406,7 @@
         <button id="resetBtn" class="btn btn-reset">
           🔄 Reset
         </button>
-        <button class="btn btn-reset" onclick='generateStorySegment2()'>
+        <button hidden class="btn btn-reset" onclick='generateStorySegment2()'>
           Test App
         </button>
       </div>
