--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
     body {
       font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, sans-serif;
-      background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+      background: linear-gradient(135deg, #ea6666 0%, #a24b4e 100%);
       min-height: 100vh;
       padding: 20px;
     }
@@ -104,7 +104,7 @@
     }
 
     .genre-select option {
-      background: #764ba2;
+      background: #a24e4b;
       color: white;
     }
 
@@ -218,8 +218,8 @@
     }
 
     .permissions-box {
-      background: rgba(59, 130, 246, 0.2);
-      border: 2px solid rgba(59, 130, 246, 0.3);
+      background: rgba(246, 115, 59, 0.2);
+      border: 2px solid rgba(246, 78, 59, 0.3);
       border-radius: 10px;
       padding: 20px;
       margin-top: 20px;
