--- a/index.html
+++ b/index.html
@@ -414,7 +414,7 @@
       <div id="generatingIndicator" style="display: none;" class="generating">
         ✨ Generating your story segment...
       </div>
-       <div id="generatingAudioIndicator" style="display: none;" class="generating">
+      <div id="generatingAudioIndicator" style="display: none;" class="generating">
         ✨ Generating your story segment's TTS...
       </div>
     </div>
@@ -694,11 +694,16 @@
         avgSpeed > 3 ? 'moderate tension' :
           'reflective and atmospheric';
 
-      const prompt = 'You are writing segment ' + segmentNumber + ' of an ongoing ' + state.genre + ' story. This is a story for a road trip, and they have been driving at ' + avgSpeed.toFixed(1) + ' mph, so make this segment accurate to the speed. It should be in second person with me as the main character, almost like roleplay.\n\n' +
-        (segmentNumber === 1 ?
-         'This is the BEGINNING of the story. Introduce the main character and setting in an engaging way. End with a hook that makes them want to keep driving for the next part. Write 18-20 paragraphs.' :
-          'This is segment ' + segmentNumber + '. Continue the story with rising action. Reference what happened before naturally. End with a cliffhanger or exciting moment. Write 18-20 paragraphs.\n\nHere is the story so far, which you will continue on: ' + storyText
-        ) + '\n\nWrite ONLY the story segment, no meta-commentary. Make it exciting and match the driving speed!';
+      const prompt = 'You are writing segment ' + segmentNumber + ' of an ongoing ' + state.genre + ' story. This is a story for a road trip, and they have been driving at ' + avgSpeed.toFixed(1) + ' mph, so make this segment accurate to the speed. It should be in second person with me as the main character, almost like roleplay.\n\n'
+        if(segmentNumber === 1) prompt +='This is the BEGINNING of the story. Introduce the main character and setting in an engaging way. End with a hook that makes them want to keep driving for the next part. Write 18-20 paragraphs.'
+        else{
+            var sums = "Continue the story with rising action. Reference what happened before naturally. End with a cliffhanger or exciting moment. Write 18-20 paragraphs.\n\nhere is the story so far: ";
+            for(let i = 0; i< state.storySegments.length; i++ ){
+              sums += "chapter " + i + ": " + state.storySegments[i].summary;
+            }
+            prompt += sums;
+        }   
+        prompt += '\n\nWrite ONLY the story segment, no meta-commentary. Make it exciting and match the driving speed!';
 
       try {
         const response = await fetch('https://generativelanguage.googleapis.com/v1beta/models/gemini-2.0-flash:generateContent?key=' + state.apiKey, {
@@ -722,10 +727,23 @@
         }
 
         storyText = data.candidates[0].content.parts[0].text;
-
+        const response2 = await fetch('https://generativelanguage.googleapis.com/v1beta/models/gemini-2.0-flash:generateContent?key=' + state.apiKey, {
+          method: 'POST',
+          headers: {
+            'Content-Type': 'application/json',
+          },
+          body: JSON.stringify({
+            contents: [{
+              parts: [{
+                text: "Summarize this chapter:" + storyText
+              }]
+            }]
+          })
+        });
         const newSegment = {
           segment: segmentNumber,
           text: storyText,
+          summary: await response2.json().candidates[0].content.parts[0].text,
           speed: avgSpeed,
           timestamp: new Date().toLocaleTimeString()
         };
@@ -784,7 +802,7 @@
       }
       document.querySelector(".buttons").appendChild(toggle);
       au.onended = () => { toggle.remove() };
-    
+
     }
 
     function displayStorySegment(segment) {
@@ -964,8 +982,8 @@
         }
       }
     });
-    function generateStorySegment2(){
-      generateStorySegment(state.storySegments.length+1,35)
+    function generateStorySegment2() {
+      generateStorySegment(state.storySegments.length + 1, 35)
     }
   </script>
   <script>
@@ -978,7 +996,7 @@
           console.error('Service Worker registration failed:', error);
         });
     }
-  
+
   </script>
 </body>
 
