--- a/index.html
+++ b/index.html
@@ -704,7 +704,7 @@
             prompt += sums;
         }   
         prompt += '\n\nWrite ONLY the story segment, no meta-commentary. Make it exciting and match the driving speed!';
-
+        alert(prompt);
       try {
         const response = await fetch('https://generativelanguage.googleapis.com/v1beta/models/gemini-2.0-flash:generateContent?key=' + state.apiKey, {
           method: 'POST',
