--- a/index.html
+++ b/index.html
@@ -694,7 +694,7 @@
         avgSpeed > 3 ? 'moderate tension' :
           'reflective and atmospheric';
 
-      const prompt = 'You are writing segment ' + segmentNumber + ' of an ongoing ' + state.genre + ' story. This is a story for a road trip, and they have been driving at ' + avgSpeed.toFixed(1) + ' mph, so make this segment accurate to the speed. It should be in second person with me as the main character, almost like roleplay.\n\n'
+      var prompt = 'You are writing segment ' + segmentNumber + ' of an ongoing ' + state.genre + ' story. This is a story for a road trip, and they have been driving at ' + avgSpeed.toFixed(1) + ' mph, so make this segment accurate to the speed. It should be in second person with me as the main character, almost like roleplay.\n\n'
         if(segmentNumber === 1) prompt +='This is the BEGINNING of the story. Introduce the main character and setting in an engaging way. End with a hook that makes them want to keep driving for the next part. Write 18-20 paragraphs.'
         else{
             var sums = "Continue the story with rising action. Reference what happened before naturally. End with a cliffhanger or exciting moment. Write 18-20 paragraphs.\n\nhere is the story so far: ";
