--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Running Story Tracker</title>
+  <title>Journey AI</title>
   <link rel="manifest" href="manifest.json">
   <script src="https://js.puter.com/v2/"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/localforage/1.10.0/localforage.min.js"></script>
@@ -318,7 +318,7 @@
     <div class="card">
       <div class="header">
         <span class="icon">📚</span>
-        <h1>Running Story Tracker</h1>
+        <h1>Journey AI</h1>
       </div>
 
       <div id="setupSection">
