--- a/index.html
+++ b/index.html
@@ -328,7 +328,7 @@
               Studio</a></p>
           <input type="password" id="apiKeyInput" class="api-input" placeholder="Enter your Gemini API key..." />
           <small style="color: rgba(255, 255, 255, 0.7);">Your key is stored locally and never sent anywhere except
-            Google AI. Audio uses Puter.js (no additional setup needed).</small>
+            Google AI. Audio uses Microsoft Edge TTS (no additional setup needed).</small>
         </div>
 
         <label>Choose Your Story Genre:</label>
