--- a/index.html
+++ b/index.html
@@ -926,7 +926,7 @@ function downloadTextFile(filename, text) {
         return;
       }
       var text ="";
-      state.storySegements.forEach(seg=>{
+      state.storySegments.forEach(seg=>{
         text += " ";
         text+= seg.text;
       })
